# infinity_pico-core

./: README.md
.backups/CMakeLists/Root/: CMakeLists.txt
.backups/CMakeLists/Src/: CMakeLists.txt
.backups/CMakeLists/lib/blink/: CMakeLists.txt
.backups/CMakeLists/lib/lcd_1602_lib/: CMakeLists.txt
.backups/CMakeLists/lib/ssd1306_lib/: CMakeLists.txt
Dokumente/: rtos.md
Dokumente/@Projekt/: Checklist.md  Komponenten.md  README.md  Struktur.md
Dokumente/@Work-Tree/@TODO/: TODO_001.md
Dokumente/Chatbot/Anleitungen/: CMakeLists.txt  src.CMakeLists.txt
Dokumente/Fritzing/: Technische_Zeichnung_PCB.fzz
